<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/aesthetic_bg"
    tools:context=".activities.SplashActivity">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <com.google.android.material.card.MaterialCardView
            android:layout_width="220dp"
            android:layout_height="220dp"
            app:cardCornerRadius="110dp"
            app:cardElevation="12dp"
            app:strokeColor="@color/primaryGreen"
            app:strokeWidth="3dp">

            <ImageView
                android:id="@+id/logo"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:padding="30dp"
                android:contentDescription="@string/logo_desc"
                android:src="@drawable/agrisense_logo" />
        </com.google.android.material.card.MaterialCardView>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:text="@string/app_name"
            android:textColor="@color/darkGreen"
            android:textSize="48sp"
            android:textStyle="bold" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/tagline"
            android:textColor="@color/black"
            android:textSize="18sp"
            android:textStyle="bold|italic" />

        <ProgressBar
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_marginTop="48dp"
            android:indeterminateTint="@color/primaryGreen" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>